--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Imperial Boootstrap Template</title>
+  <title>ALFAS</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -211,7 +211,7 @@ Explore our website for more information, and let us show you the difference tha
   Portfolio Section
 ============================-->
 <section id="portfolio" class="section-bg">
-  <div class="container">
+  <div class="container wow fadeInUp">
     <div class="section-header">
       <h3 class="section-title">Discover Our Work</h3>
       <div class="section-description">Explore our portfolio showcasing our craftsmanship and innovation.</div>
@@ -220,60 +220,65 @@ Explore our website for more information, and let us show you the difference tha
  <!-- gallery section -->
  
  <div class="gallery_section layout_padding2">
-  <div class="container-fluid">
+  <div class="container wow fadeInUp">
     <div class="heading_container heading_center">
       <h2>
-        Gallery
+        Yaoundé Ministry of Finance Building 2018 Africa Cameroon 
       </h2>
-      <h3>
-        Deneme
-      </h3>
     </div>
     <div class="row">
       <div class=" col-sm-8 col-md-6 px-0">
         <div class="img-box">
-          <img src="img/portfolio-8.jpg" alt="">
-          <a href="img/portfolio-8.jpg" data-toggle="lightbox" data-gallery="gallery">
+          <img src="img/g1.jpeg" alt="">
+          <a href="img/g1.jpeg" data-toggle="lightbox" data-gallery="gallery">
             <i class="fa fa-picture-o" aria-hidden="true"></i>
           </a>
         </div>
       </div>
       <div class="col-sm-4 col-md-3 px-0">
         <div class="img-box">
-          <img src="img/portfolio-7.jpg" alt="">
-          <a href="img/portfolio-7.jpg" data-toggle="lightbox" data-gallery="gallery">
+          <img src="img/g2.jpeg" alt="">
+          <a href="img/g2.jpeg" data-toggle="lightbox" data-gallery="gallery">
             <i class="fa fa-picture-o" aria-hidden="true"></i>
           </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-3 px-0">
         <div class="img-box">
-          <img src="img/portfolio-6.jpg" alt="">
-          <a href="img/portfolio-6.jpg" data-toggle="lightbox" data-gallery="gallery">
+          <img src="img/g3.jpeg" alt="">
+          <a href="img/g3.jpeg" data-toggle="lightbox" data-gallery="gallery">
             <i class="fa fa-picture-o" aria-hidden="true"></i>
           </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-3 px-0">
         <div class="img-box">
-          <img src="img/g4.jpg" alt="">
-          <a href="img/g4.jpg" data-toggle="lightbox" data-gallery="gallery">
+          <img src="img/g4.jpeg" alt="">
+          <a href="img/g4.jpeg" data-toggle="lightbox" data-gallery="gallery">
             <i class="fa fa-picture-o" aria-hidden="true"></i>
           </a>
         </div>
       </div>
       <div class="col-sm-4 col-md-3 px-0">
         <div class="img-box">
-          <img src="img/g5.jpg" alt="">
-          <a href="img/g5.jpg" data-toggle="lightbox" data-gallery="gallery">
+          <img src="img/g5.jpeg" alt="">
+          <a href="img/g5.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/g6.jpeg" alt="">
+          <a href="img/g6.jpeg" data-toggle="lightbox" data-gallery="gallery">
             <i class="fa fa-picture-o" aria-hidden="true"></i>
           </a>
         </div>
       </div>
       <div class="col-sm-8 col-md-6 px-0">
         <div class="img-box">
-          <img src="img/g6.jpg" alt="">
-          <a href="img/g6.jpg" data-toggle="lightbox" data-gallery="gallery">
+          <img src="img/g7.jpeg" alt="">
+          <a href="img/g7.jpeg" data-toggle="lightbox" data-gallery="gallery">
             <i class="fa fa-picture-o" aria-hidden="true"></i>
           </a>
         </div>
@@ -283,11 +288,431 @@ Explore our website for more information, and let us show you the difference tha
 </div>
 
 <!-- end gallery section -->
+<!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        ART Telecommunications Regulatory Agency 2021 Yaoundé, Cameroon 
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/a1.jpeg" alt="">
+          <a href="img/a1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a2.jpeg" alt="">
+          <a href="img/a2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a3.jpeg" alt="">
+          <a href="img/a3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a4.jpeg" alt="">
+          <a href="img/a4.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a5.jpeg" alt="">
+          <a href="img/a5.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a6.jpeg" alt="">
+          <a href="img/a6.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/a7.jpeg" alt="">
+          <a href="img/a7.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a8.jpeg" alt="">
+          <a href="img/a8.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/a9.jpeg" alt="">
+          <a href="img/a9.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!-- end gallery section -->
+<!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Aris Grand Tower Residence 2016 Istanbul Türkiye
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/b1.jpeg" alt="">
+          <a href="img/b1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/b2.jpeg" alt="">
+          <a href="img/b2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/b3.jpeg" alt="">
+          <a href="img/b3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/b4.jpeg" alt="">
+          <a href="img/b4.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/b5.jpeg" alt="">
+          <a href="img/b5.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+  <!-- end gallery section -->
+<!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        General Pharmaceutical Administration Building 2012 Ankara
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/c1.jpeg" alt="">
+          <a href="img/c1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/c2.jpeg" alt="">
+          <a href="img/c2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/c3.jpeg" alt="">
+          <a href="img/c3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+  <!-- end gallery section -->
+<!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Seref Büryan Restaurant 2019 Istanbul Turkey
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/d1.jpeg" alt="">
+          <a href="img/d1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/d2.jpeg" alt="">
+          <a href="img/d2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/d3.jpeg" alt="">
+          <a href="img/d3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+  <!-- end gallery section -->
+<!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Istanbul Turkey Business Center 2008
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/f1.jpeg" alt="">
+          <a href="img/f1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/f2.jpeg" alt="">
+          <a href="img/f2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/f3.jpeg" alt="">
+          <a href="img/f3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+  <!-- end gallery section -->
+<!-- gallery section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Turkish Embassy 2006 Astana Kazakhstan 
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/e1.jpeg" alt="">
+          <a href="img/e1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/e2.jpeg" alt="">
+          <a href="img/e2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/e3.jpeg" alt="">
+          <a href="img/e3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/e4.jpeg" alt="">
+          <a href="img/e4.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/e5.jpeg" alt="">
+          <a href="img/e5.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/e6.jpeg" alt="">
+          <a href="img/e6.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/e7.jpeg" alt="">
+          <a href="img/e7.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- end gallery section -->
+<!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Governor's Office Building 2006 Kostanay Kazakhstan
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/ı1.jpeg" alt="">
+          <a href="img/ı1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/ı2.jpeg" alt="">
+          <a href="img/ı2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/ı3.jpeg" alt="">
+          <a href="img/ı3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- end gallery section -->
+  <!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Kazakistan Astana Hotel 2002
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/h1.jpeg" alt="">
+          <a href="img/h1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/h2.jpeg" alt="">
+          <a href="img/h2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/h3.jpeg" alt="">
+          <a href="img/h3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/h3.jpeg" alt="">
+          <a href="img/h3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/h4.jpeg" alt="">
+          <a href="img/h4.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- end gallery section -->
+  
   <!--==========================
   Contact Section
   ============================-->
