--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ Explore our website for more information, and let us show you the difference tha
   <div class="container wow fadeInUp">
     <div class="heading_container heading_center">
       <h2>
-        Kazakistan Astana Hotel 2002
+        Kazakistan Astana School 2007
       </h2>
     </div>
     <div class="row">
@@ -712,7 +712,92 @@ Explore our website for more information, and let us show you the difference tha
 </div>
 
   <!-- end gallery section -->
-  
+  <!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Kazakistan Astana Hotel 2002
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/r1.jpeg" alt="">
+          <a href="img/r1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/r2.jpeg" alt="">
+          <a href="img/r2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/r3.jpeg" alt="">
+          <a href="img/r3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/r3.jpeg" alt="">
+          <a href="img/r3.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/r4.jpeg" alt="">
+          <a href="img/r4.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- end gallery section -->
+  <!-- gallery2 section -->
+ 
+<div class="gallery_section layout_padding2">
+  <div class="container wow fadeInUp">
+    <div class="heading_container heading_center">
+      <h2>
+        Kazakistan Astana Hospital 2007
+      </h2>
+    </div>
+    <div class="row">
+      <div class=" col-sm-8 col-md-6 px-0">
+        <div class="img-box">
+          <img src="img/w1.jpeg" alt="">
+          <a href="img/w1.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3 px-0">
+        <div class="img-box">
+          <img src="img/w2.jpeg" alt="">
+          <a href="img/w2.jpeg" data-toggle="lightbox" data-gallery="gallery">
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- end gallery section -->
   <!--==========================
   Contact Section
   ============================-->
