--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@ Explore our website for more information, and let us show you the difference tha
       </div>
     </div>
   </section>
-
   <!--==========================
   Services Section
   ============================-->
@@ -169,27 +168,27 @@ Explore our website for more information, and let us show you the difference tha
 
       <div class="row">
         <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-desktop"></i></div>
+          <div class="service-icon"><i class="fa fa-globe"></i></div>
           <h4 class="service-title"><a href="">Consultancy</a></h4>
           <p class="service-description">we offer tailored solutions to optimize your operations and enhance your aluminum-related ventures.</p>
         </div>
         <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-bar-chart"></i></div>
+          <div class="service-icon"><i class="fa fa-globe"></i></div>
           <h4 class="service-title"><a href="">Aluminum Glass Facade Systems</a></h4>
           <p class="service-description">aluminum glass facade systems provide innovative solutions for modern structures</p>
         </div>
         <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-paper-plane"></i></div>
+          <div class="service-icon"><i class="fa fa-globe "></i></div>
           <h4 class="service-title"><a href="">Composite Facade Cladding Systems</a></h4>
           <p class="service-description">composite ceramic granite facade cladding systems redefine architectural excellence with innovative solutions</p>
         </div>
         <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-photo"></i></div>
+          <div class="service-icon"><i class="fa fa-globe"></i></div>
           <h4 class="service-title"><a href="">Pergola and Guillotine Systems</a></h4>
           <p class="service-description">Enhance your outdoor spaces with our versatile pergola and guillotine systems, combining functionality with elegant design for unparalleled comfort and style</p>
         </div>
         <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-road"></i></div>
+          <div class="service-icon"><i class="fa fa-globe"></i></div>
           <h4 class="service-title"><a href="">Aluminum Joinery Systems</a></h4>
           <p class="service-description">Elevate your space with our precision-crafted aluminum joinery systems, combining durability, aesthetics, and energy efficiency for seamless integration into any architectural design</p>
         </div>
@@ -858,5 +857,9 @@ Explore our website for more information, and let us show you the difference tha
 
 
 </body>
-
+<script>// lightbox gallery
+  $(document).on("click", '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+  });</script>
 </html>
