--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="row">
 
         <div class="col-lg-6 about-img">
-          <img src="img/about-img.jpg" alt="">
+          <img src="img/IMG-20170823-WA0007.jpg" alt="" width="555" height="435">
         </div>
 
         <div class="col-md-6 about-content">
