language selection html added

--- a/index.html
+++ b/index.html
@@ -8,42 +8,22 @@
   <meta content="" name="keywords">
   <meta content="" name="description">
 
-  <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
-  <meta property="og:title" content="">
-  <meta property="og:image" content="">
-  <meta property="og:url" content="">
-  <meta property="og:site_name" content="">
-  <meta property="og:description" content="">
-
-  <!-- Twitter Cards integration: https://dev.twitter.com/cards/  -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="">
-  <meta name="twitter:title" content="">
-  <meta name="twitter:description" content="">
-  <meta name="twitter:image" content="">
-
   <!-- Place your favicon.ico and apple-touch-icon.png in the template root directory -->
   <link href="img/favicon.ico" rel="shortcut icon">
-  
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
-
   <!-- lightbox Gallery-->
   <link rel="stylesheet" href="css/ekko-lightbox.css" />
-
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
-
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -51,15 +31,6 @@
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate-css/animate.min.css" rel="stylesheet">
 
-  <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: Imperial
-    Theme URL: https://bootstrapmade.com/imperial-free-onepage-bootstrap-theme/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
 </head>
 
 <body>
@@ -80,9 +51,10 @@
         <div class="actions">
           <a href="#about" class="btn-get-started">Get Strated</a>
           <a href="#services" class="btn-services">Our Services</a>
+          <a href="language" class="btn-language">Language</a>
         </div>
       </div>
-    </div>
+    </div>    
   </section>
 
   <!--==========================
@@ -132,7 +104,7 @@
         </div>
 
         <div class="col-md-6 about-content">
-          <h2 class="about-title">We provide great services and ideass</h2>
+          <h2 class="about-title">We provide great services and ideas</h2>
           <p class="about-text">
             Throughout our journey, we have undertaken numerous projects, both at home and abroad, honing our skills and refining our approach. From small-scale ventures to large-scale endeavors, we have left our mark with precision and dedication.
 As we look to the future, we remain steadfast in our dedication to excellence and innovation. Every client is not just a customer but a part of our extended family, and we are dedicated to fostering lasting relationships built on trust and mutual success.
